# cpsat-js

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  package-lock.json  package.json  plan.md  tsconfig.json
src/: index.ts
src/cpp/: cpsat_api.cpp
src/model/: constraint.ts  cp-model.ts  domain.ts  int-var.ts  interval-var.ts  linear-expr.ts
src/solver/: cp-solver.ts
test/integration/: knapsack.test.ts  nqueens.test.ts  scheduling.test.ts  tsp.test.ts
test/unit/: cp-model.test.ts
